k8s/apps/atuin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atuin-service
  namespace: atuin
  labels:
    app: atuin
spec:
  type: ClusterIP
  selector:
    app: atuin
  ports:
    - name: http
      port: 8888
      targetPort: http
      protocol: TCP
